--- a/trunk/Kalypso1d2dProject/src/org/kalypso/kalypso1d2d/internal/bce2d/i18n/messages.properties
+++ b/trunk/Kalypso1d2dProject/src/org/kalypso/kalypso1d2d/internal/bce2d/i18n/messages.properties
@@ -1,3 +1,4 @@
+I2DContants_0=BCE-2D files
 org.kalypso.wizards.export2d.Export2dFileSelectWizardPage.1=Export FE-Mesh
 org.kalypso.wizards.export2d.Export2dFileSelectWizardPage.10=Invalid File Suffix
 org.kalypso.wizards.export2d.Export2dFileSelectWizardPage.2=Export an FE-Mesh in *.2D or *.hmo-format 
