--- a/trunk/Kalypso1d2dProject/src/org/kalypso/kalypso1d2d/pjt/i18n/messages.properties
+++ b/trunk/Kalypso1d2dProject/src/org/kalypso/kalypso1d2d/pjt/i18n/messages.properties
@@ -156,6 +156,7 @@ roughness.mapv.layer.Korrekturrauheiten=Correction Resistances
 roughness.mapv.layer.Basisrauheiten=Base Resistances
 base.mapv.gismapview.Grundlagen=Base Data
 base.mapv.layer.Trennflachen=Imaginary Walls
+HydrographManagementWidget.0=Import hydrograph locations from an external file
 result.mapv.gismapview.Ergebnisse=Results
 result.mapv.layer.FE-Netz=FE-Net
 #Export hydrograph
