--- a/trunk/KalypsoModel1D2D/src/org/kalypso/kalypsomodel1d2d/i18n/messages.properties
+++ b/trunk/KalypsoModel1D2D/src/org/kalypso/kalypsomodel1d2d/i18n/messages.properties
@@ -1,3 +1,6 @@
+ChannelEditInfoWidget_2=<no mesh available>
+ChannelEditInfoWidget_3=<missing z value>
+ChannelEditInfoWidget_4=z = %.2f [mNN]
 org.kalypso.kalypsomodel1d2d.ogc.gml.loader.GmlLoader.12=Adaption failed. Setting default version number.
 
 org.kalypso.kalypsomodel1d2d.ogc.gml.om.table.command.handler.Command1D2DTimestepsInterpolate.4=Info
@@ -129,3 +132,6 @@ org.kalypso.kalypsomodel1d2d.ui.map.themeinfo.PolyElementThemeInfo.7=Vegetation 
 org.kalypso.kalypsomodel1d2d.ui.map.themeinfo.PolyElementThemeInfo.8=Vegetation (axay, dp): %.3f m (%.2f%%), %.3f m (%.2f%%)%n
 org.kalypso.kalypsomodel1d2d.ui.map.themeinfo.PolyElementThemeInfo.9=Eddy: %.3f / %.3f / %.3f / %.3f%n
 PreviewModelDtm.0=Show/Refresh Model-Isolines
+SurfaceModelChecker_0=Found inconsistent element(s)
+SurfaceModelChecker_1=No inconsistent elements found
+SurfaceModelChecker_2=Element %s: %s
