--- a/trunk/KalypsoModelWspmTuhhCore/src/org/kalypso/model/wspm/tuhh/core/i18n/messages.properties
+++ b/trunk/KalypsoModelWspmTuhhCore/src/org/kalypso/model/wspm/tuhh/core/i18n/messages.properties
@@ -19,22 +19,22 @@ KNAUF_FLIESSGESETZ_4=Prandtl-Colebrook with vegetation (Nuding)
 KNAUF_FLIESSGESETZ_5=Prandtl-Colebrook with vegetation (Mertens)
 KNAUF_FLIESSGESETZ_6=Prandtl-Colebrook with vegetation (Pasche)
 KNAUF_FLIESSGESETZ_7=Prandtl-Colebrook and Einstein (no vegetation)
-KnaufBeanSerializer_1=Error - Serializing Knauf Profiles
+KnaufBeanSerializer_1=Serializing Knauf Profiles
 KnaufBeanSerializer_2=Successful - Serializing Knauf Profiles
 KnaufBridgeProfileBuilder.0=Conflict\! Failed to move bridge in downstream direction. New station (%.3f km) interferes with neighbouring sections (%.3f km, %.3f km).
 KnaufBridgeProfileBuilder.1=Adjustment of bridge in downstream direction.
 KnaufBridgeProfileBuilder_0=Exporting KalypsoWspm Bridge Profile
 KnaufBridgeProfileBuilder_1=Generate Bridge Ober-/Unterwasser profile %.3f km was not added - existing profile between bridge profile and newly created profile.
 KnaufBridgeProfileBuilder_2=Newly generated profile %.3f is very close to an existing profile.
-KnaufCalculationBeanBuilder_0=Exporting Knauf Reach
-KnaufCalculationBeanBuilder_1=Exporting Knauf Calculation
-KnaufCalculationBeanBuilder_2=Successful added .wspr header
-KnaufCalculationBeanBuilder_3=Successful added .wspr footer
-KnaufProfileBeanBuilder_0=Warning\! Ignored Building at profile %.3f km
-KnaufProfileBeanBuilder_1=Knauf-Profile Export - Profile %.3f km
+KnaufCalculationBeanBuilder_0=Exporting Knauf reach
+KnaufCalculationBeanBuilder_1=Exporting Knauf calculation
+KnaufCalculationBeanBuilder_2=.Adding wspr header
+KnaufCalculationBeanBuilder_3=.Adding wspr footer
+KnaufProfileBeanBuilder_0=Ignored Building at profile %.3f km (%s)
+KnaufProfileBeanBuilder_1=Profile %.3f km
 KnaufProfileExporter_0=Knauf Profile Exporter
-KnaufReachBeanBuilder_0=Exporting profile %.3f km
-KnaufReachBeanBuilder_1=Exporting Knauf Calculation Reach
+KnaufReachBeanBuilder_0=Profile %.3f km
+KnaufReachBeanBuilder_1=Reaches
 KnaufSA10Bean_0=KalypsoWSPM Knauf Profile Export
 KnaufSA11Bean_0=Project\: n/a
 KnaufSA11Bean_1=Project\: %s
