--- a/trunk/KalypsoModelWspmTuhhCore/src/org/kalypso/model/wspm/tuhh/core/i18n/messages.properties
+++ b/trunk/KalypsoModelWspmTuhhCore/src/org/kalypso/model/wspm/tuhh/core/i18n/messages.properties
@@ -21,19 +21,19 @@ KNAUF_FLIESSGESETZ_6=Prandtl-Colebrook with vegetation (Pasche)
 KNAUF_FLIESSGESETZ_7=Prandtl-Colebrook and Einstein (no vegetation)
 KnaufBeanSerializer_1=Serializing Knauf Profiles
 KnaufBeanSerializer_2=Successful - Serializing Knauf Profiles
-KnaufBridgeProfileBuilder.0=Conflict\! Failed to move bridge in downstream direction. New station (%.3f km) interferes with neighbouring sections (%.3f km, %.3f km).
+KnaufBridgeProfileBuilder.0=Conflict\! Failed to move bridge in downstream direction. New station (%.4 km) interferes with neighbouring sections (%.4f km, %.4f km).
 KnaufBridgeProfileBuilder.1=Adjustment of bridge in downstream direction.
 KnaufBridgeProfileBuilder_0=Exporting KalypsoWspm Bridge Profile
-KnaufBridgeProfileBuilder_1=Generate Bridge Ober-/Unterwasser profile %.3f km was not added - existing profile between bridge profile and newly created profile.
-KnaufBridgeProfileBuilder_2=Newly generated profile %.3f is very close to an existing profile.
+KnaufBridgeProfileBuilder_1=Generate Bridge Ober-/Unterwasser profile %.4f km was not added - existing profile between bridge profile and newly created profile.
+KnaufBridgeProfileBuilder_2=Newly generated profile %.4f is very close to an existing profile.
 KnaufCalculationBeanBuilder_0=Exporting Knauf reach
 KnaufCalculationBeanBuilder_1=Exporting Knauf calculation
 KnaufCalculationBeanBuilder_2=.Adding wspr header
 KnaufCalculationBeanBuilder_3=.Adding wspr footer
-KnaufProfileBeanBuilder_0=Ignored Building at profile %.3f km (%s)
-KnaufProfileBeanBuilder_1=Profile %.3f km
+KnaufProfileBeanBuilder_0=Ignored Building at profile %.4f km (%s)
+KnaufProfileBeanBuilder_1=Profile %.4f km
 KnaufProfileExporter_0=Knauf Profile Exporter
-KnaufReachBeanBuilder_0=Profile %.3f km
+KnaufReachBeanBuilder_0=Profile %.4f km
 KnaufReachBeanBuilder_1=Reaches
 KnaufSA10Bean_0=KalypsoWSPM Knauf Profile Export
 KnaufSA11Bean_0=Project\: n/a
