--- a/trunk/Kalypso1d2dProject/src/org/kalypso/kalypso1d2d/pjt/i18n/messages.properties
+++ b/trunk/Kalypso1d2dProject/src/org/kalypso/kalypso1d2d/pjt/i18n/messages.properties
@@ -108,7 +108,7 @@ org.kalypso.kalypso1d2d.pjt.map.HydrographManagementWidget.17=Reading data for h
 org.kalypso.kalypso1d2d.pjt.map.HydrographManagementWidget.18=Error while Reading.
 org.kalypso.kalypso1d2d.pjt.map.HydrographManagementWidget.20=Generate Hydrograph
 org.kalypso.kalypso1d2d.pjt.map.HydrographManagementWidget.21=Error
-org.kalypso.kalypso1d2d.pjt.map.HydrographManagementWidget.22=Add Coverage
+org.kalypso.kalypso1d2d.pjt.map.HydrographManagementWidget.22=Add Hydrograph
 org.kalypso.kalypso1d2d.pjt.map.HydrographManagementWidget.23=Add Hydrograph Position
 org.kalypso.kalypso1d2d.pjt.map.HydrographManagementWidget.24=Select Hydrograph
 org.kalypso.kalypso1d2d.pjt.map.HydrographManagementWidget.25=Select Hydrograph Position
