--- a/trunk/KalypsoModelWspmTuhhUI/plugin_de.properties
+++ b/trunk/KalypsoModelWspmTuhhUI/plugin_de.properties
@@ -17,6 +17,7 @@ pasche.rauheit=Rauheit
 org.kalypso.model.wspm.ui.commands.toggleWaterlevelRestrictionMarker.name=Zeige Wasserspiegel au\u00DFerhalb des durchstr\u00F6mten Bereichs
 org.kalypso.model.wspm.exportwizard.wspwin.description=Exportiert WSP-Modell (TU-HH) als WspWin-Projekt
 org.kalypso.model.wspm.calcTuhhAction.name=Simulation starten
+org.kalypso.model.wspm.calcTuhhAction.description=Simulation starten
 perspective.name=WSPM
 category.name.2=Fremdformate
 category.name.1=ESRI Shape
